--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,14 +3,25 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^4.16.2",
     "cors": "^2.8.6",
-    "express": "^5.2.1"
+    "dotenv": "^17.2.4",
+    "exceljs": "^4.4.0",
+    "express": "^5.2.1",
+    "minio": "^8.0.6",
+    "multer": "^2.0.2",
+    "prisma": "^4.16.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
