--- a/frontend/app-client/package.json
+++ b/frontend/app-client/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^6.0.1",
     "formidable": "^3.5.2",
+    "googleapis": "^171.4.0",
     "minio": "^8.0.3",
     "nanoid": "^5.0.8",
     "next": "15.4.6",
